--- a/core/res/res/values/havoc_symbols.xml
+++ b/core/res/res/values/havoc_symbols.xml
@@ -265,4 +265,16 @@
   <java-symbol type="style" name="GlobalActionsAnimationXylon" />
   <java-symbol type="style" name="GlobalActionsAnimationCard" />
   <java-symbol type="style" name="GlobalActionsAnimationRotate" />
+
+  <!-- SlimSeekBarPreference -->
+  <java-symbol type="layout" name="seek_bar_preference" />
+  <java-symbol type="id" name="seekBarPrefBarContainer" />
+  <java-symbol type="id" name="seekBarPrefValue" />
+  <java-symbol type="id" name="seekBarPrefUnitsRight" />
+  <java-symbol type="id" name="seekBarPrefUnitsLeft" />
+  <java-symbol type="attr" name="interval" />
+  <java-symbol type="attr" name="min" />
+  <java-symbol type="attr" name="unitsLeft" />
+  <java-symbol type="attr" name="unitsRight" />
+
 </resources>
