Fw_base - Forward port SlimSeekBarPreference
Patchset: materialize slider preference

Change-Id: I84c16cee9162a3fd53c0b62398a2ca03415ce974
Signed-off-by: Corey Edwards <ensabahnur16@gmail.com>

--- a/core/res/res/values/havoc_strings.xml
+++ b/core/res/res/values/havoc_strings.xml
@@ -171,4 +171,7 @@
 
     <!-- Text of the checkbox for the permission confirmation dialog to remember the user's choice. [CHAR LIMIT=40] -->
     <string name="permission_remember_choice">Remember my choice</string>
+
+    <string name="default_string">Default</string>
+
 </resources>
