Aosp hidden partial screenshot code fixes
- fix FC: java.lang.IllegalArgumentException: x must be >= 0
- show a less scaring warning whe the screenshot is aborted

huge thanks to @Mazda-- who found the TAKE_SCREENSHOT_SELECTED_REGION
flag when Nougat landed.

--- a/packages/SystemUI/res/values/havoc_strings.xml
+++ b/packages/SystemUI/res/values/havoc_strings.xml
@@ -319,4 +319,8 @@
          values/config.xml) and must be truncated.
          [CHAR LIMIT=4] -->
     <string name="status_bar_notification_info_overflow" translatable="false">\u221E</string>
+
+    <!-- Partial screenshot -->
+    <string name="screenshot_abort_title">No screenshot taken</string>
+    <string name="screenshot_abort_text">Operation aborted</string>
 </resources>
