PowerMenu: add Screenrecord to the menu [1/2]
Change-Id: Icb2ccccffb9b17692d7451ad222063e18062820f

--- a/packages/SystemUI/res/values/havoc_strings.xml
+++ b/packages/SystemUI/res/values/havoc_strings.xml
@@ -351,4 +351,7 @@
     <!-- Partial screenshot -->
     <string name="screenshot_abort_title">No screenshot taken</string>
     <string name="screenshot_abort_text">Operation aborted</string>
+
+    <!-- Label for item that screenrecords in power menu options dialog -->
+    <string name="global_action_screenrecord">Screenrecord</string>
 </resources>
