--- a/core/res/res/values/havoc_config.xml
+++ b/core/res/res/values/havoc_config.xml
@@ -25,6 +25,7 @@
         <item>advanced</item>
         <item>lockdown</item>
         <item>screenshot</item>
+        <item>screenrecord</item>
         <item>airplane</item>
         <item>torch</item>
         <item>onthego</item>
