--- a/core/res/res/values/havoc_symbols.xml
+++ b/core/res/res/values/havoc_symbols.xml
@@ -303,6 +303,9 @@
   <java-symbol type="drawable" name="ic_shortcut_action_screenshot" />
   <java-symbol type="drawable" name="ic_shortcut_action_search" />
 
-    <!-- System fonts -->
-    <java-symbol type="array" name="config_fontPackages" />
+  <!-- System fonts -->
+  <java-symbol type="array" name="config_fontPackages" />
+
+  <!-- Power menu -->
+  <java-symbol type="drawable" name="ic_lock_screenrecord" />
 </resources>
