--- a/core/res/res/values/havoc_symbols.xml
+++ b/core/res/res/values/havoc_symbols.xml
@@ -268,4 +268,7 @@
 
   <!-- System fonts -->
   <java-symbol type="array" name="config_fontPackages" />
+
+  <!-- Power menu -->
+  <java-symbol type="drawable" name="ic_lock_screenrecord" />
 </resources>
