--- a/packages/SystemUI/res/values/havoc_dimens.xml
+++ b/packages/SystemUI/res/values/havoc_dimens.xml
@@ -110,4 +110,8 @@
     <dimen name="ticker_icon_end_margin">4dp</dimen>
     <dimen name="ticker_text_top_padding">2dp</dimen>
     <dimen name="ticker_text_end_padding">10dp</dimen>
+
+    <!-- The width/height of the charging indicator view on keyguard. -->
+    <dimen name="keyguard_charging_indication_height">64dp</dimen>
+    <dimen name="keyguard_charging_indication_width">32dp</dimen>
 </resources>
