base: SystemUI: add tuner switch to hide qs info header
ugly and I dont need to see that info there

Change-Id: I88d093f247dae87c89c2309c24ebe0eab3f6d6c0

--- a/packages/SystemUI/res/values/havoc_dimens.xml
+++ b/packages/SystemUI/res/values/havoc_dimens.xml
@@ -116,4 +116,7 @@
     <dimen name="keyguard_charging_indication_width">32dp</dimen>
 
     <dimen name="quick_status_bar_margin">14dp</dimen>
+
+    <!-- Hide header -->
+    <dimen name="quick_status_bar_system_icons_margin_top">8dp</dimen>
 </resources>
