--- a/core/res/res/values/havoc_symbols.xml
+++ b/core/res/res/values/havoc_symbols.xml
@@ -236,4 +236,7 @@
   <java-symbol type="drawable" name="weather_11" />
   <java-symbol type="drawable" name="weather_13" />
   <java-symbol type="drawable" name="weather_50" />
+
+  <!-- Whether to cleanup fingerprints upon connection to the daemon and when user switches -->
+  <java-symbol type="bool" name="config_cleanupUnusedFingerprints" />
 </resources>
