--- a/core/res/res/values/havoc_symbols.xml
+++ b/core/res/res/values/havoc_symbols.xml
@@ -220,4 +220,20 @@
   <java-symbol type="color" name="qs_tile_disabled" />
   <java-symbol type="color" name="qs_tile_inactive" />
   <java-symbol type="color" name="qs_tile_active" />
+
+  <!-- Weather icons -->
+  <java-symbol type="drawable" name="weather_01" />
+  <java-symbol type="drawable" name="weather_01n" />
+  <java-symbol type="drawable" name="weather_02" />
+  <java-symbol type="drawable" name="weather_02n" />
+  <java-symbol type="drawable" name="weather_03" />
+  <java-symbol type="drawable" name="weather_03n" />
+  <java-symbol type="drawable" name="weather_04" />
+  <java-symbol type="drawable" name="weather_04n" />
+  <java-symbol type="drawable" name="weather_09" />
+  <java-symbol type="drawable" name="weather_10" />
+  <java-symbol type="drawable" name="weather_10n" />
+  <java-symbol type="drawable" name="weather_11" />
+  <java-symbol type="drawable" name="weather_13" />
+  <java-symbol type="drawable" name="weather_50" />
 </resources>
