base: SystemUI: add tuner to hide qs drag handle
just takes up space

Change-Id: I5c353e0124dafc8bcc20a52bc503380b833496ec

--- a/packages/SystemUI/res/values/havoc_dimens.xml
+++ b/packages/SystemUI/res/values/havoc_dimens.xml
@@ -119,4 +119,6 @@
 
     <!-- Hide header -->
     <dimen name="quick_status_bar_system_icons_margin_top">8dp</dimen>
+
+    <dimen name="quick_qs_drag_handle_height">20dp</dimen>
 </resources>
