--- a/packages/SystemUI/res/values/havoc_styles.xml
+++ b/packages/SystemUI/res/values/havoc_styles.xml
@@ -16,7 +16,7 @@
  * limitations under the License.
  */
 -->
-<resources xmlns:android="http://schemas.android.com/apk/res/android">
+<resources>
 
     <!-- Pure Tuner Theme-->
     <style name="ExTunerSettings" parent="@android:style/Theme.DeviceDefault.Settings">
@@ -37,12 +37,6 @@
         <item name="android:textColor">@color/status_bar_carrier_color</item>
     </style>
 
-    <style name="TextAppearance.StatusBar.Expanded.Weather">
-        <item name="android:textSize">12sp</item>
-        <item name="android:textStyle">normal</item>
-        <item name="android:textColor">?android:attr/textColorPrimary</item>
-    </style>
-
     <style name="ListTheme" parent="@*android:style/Theme.Holo">  
         <item name="android:windowBackground">@*android:color/transparent</item>  
         <item name="android:windowIsTranslucent">true</item>  
@@ -53,12 +47,6 @@
         <item name="android:overScrollMode">never</item>  
         <item name="android:divider">@null</item>  
     </style>  
-
-    <style name="TextAppearance.StatusBar.Expanded.Weather.Detailed">
-        <item name="android:textSize">14sp</item>
-        <item name="android:textStyle">normal</item>
-        <item name="android:textColor">?android:attr/textColorPrimary</item>
-    </style>
 
       <style name="TextAppearance.StatusBar.RecentsN" parent="@*android:style/TextAppearance.StatusBar.Icon">
         <item name="android:textSize">16dp</item>
