--- a/packages/SystemUI/res/layout/ambient_indication_inner.xml
+++ b/packages/SystemUI/res/layout/ambient_indication_inner.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
     android:orientation="vertical"
     android:id="@+id/ambient_indication"
@@ -7,17 +8,16 @@
     android:visibility="invisible"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="88.0dip"
+    android:layout_marginBottom="92.0dip"
     android:layout_marginStart="64.0dip"
     android:layout_marginEnd="64.0dip"
     android:forceHasOverlappingRendering="false">
 
-    <ImageView
+    <havoc.support.lottie.LottieAnimationView
         android:id="@+id/ambient_indication_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
         android:layout_marginBottom="8.0dip"
-        android:src="@drawable/ic_music_note_24dp"
         android:tint="?attr/wallpaperTextColorSecondary"
         android:tintMode="src_in"
         android:forceHasOverlappingRendering="false" />
