--- a/packages/SystemUI/res/values/havoc_strings.xml
+++ b/packages/SystemUI/res/values/havoc_strings.xml
@@ -283,6 +283,34 @@
     <string name="quick_settings_theme_tile_color_user_five">Money</string>
     <string name="quick_settings_theme_tile_color_user_six">Sandy</string>
     <string name="quick_settings_theme_tile_color_user_seven">Rams</string>
+    <string name="quick_settings_theme_tile_color_candy_red">Candy red</string>
+    <string name="quick_settings_theme_tile_color_pale_red">Pale red</string>
+    <string name="quick_settings_theme_tile_color_extended_green">Extended green</string>
+    <string name="quick_settings_theme_tile_color_pale_blue">Pale blue</string>
+    <string name="quick_settings_theme_tile_color_jade_green">Jade green</string>
+    <string name="quick_settings_theme_tile_color_holillusion_cyan">Holillusion cyan</string>
+    <string name="quick_settings_theme_tile_color_stock">Teal</string>
+    <string name="quick_settings_theme_tile_color_seaside_mint">Seaside mint</string>
+    <string name="quick_settings_theme_tile_color_move_mint">Move mint</string>
+    <string name="quick_settings_theme_tile_color_diff_day_green">A different day green</string>
+    <string name="quick_settings_theme_tile_color_obfuscated_bleu">Obfuscated bleu</string>
+    <string name="quick_settings_theme_tile_color_french_bleu">French bleu</string>
+    <string name="quick_settings_theme_tile_color_cold_bleu">Cold evening blue</string>
+    <string name="quick_settings_theme_tile_color_heirloom_bleu">Heirloom hydrangea bleu</string>
+    <string name="quick_settings_theme_tile_color_not_impressive_purple">Not impressive purple</string>
+    <string name="quick_settings_theme_tile_color_footprint_purple">Footprint purple</string>
+    <string name="quick_settings_theme_tile_color_dusk_purple">Dusk purple</string>
+    <string name="quick_settings_theme_tile_color_illusions_purple">Illusions purple</string>
+    <string name="quick_settings_theme_tile_color_dreamy_purple">Dreamy purple</string>
+    <string name="quick_settings_theme_tile_color_spooked_purple">Spooked purple</string>
+    <string name="quick_settings_theme_tile_color_tru_fil_pink">True feel pink</string>
+    <string name="quick_settings_theme_tile_color_bubblegum_pink">Bubblegum pink</string>
+    <string name="quick_settings_theme_tile_color_hazed_pink">Hazed pink</string>
+    <string name="quick_settings_theme_tile_color_burning_red">Burning red</string>
+    <string name="quick_settings_theme_tile_color_new_house_orange">New house orange</string>
+    <string name="quick_settings_theme_tile_color_warmth_orange">Warmth orange</string>
+    <string name="quick_settings_theme_tile_color_mania_amber">Mania amber</string>
+    <string name="quick_settings_theme_tile_color_cold_yellow">Cold summer yellow</string>
     <string name="theme_info_title">What is this?</string>
     <string name="theme_info_message">The Themes tile is a unique but easy to use tile that allows the user to change the system accent or style.\n\nTo change between accents and styles, simply long press on the tile and then press again to select from the options offered.</string>
 
