--- a/packages/SystemUI/res/values/havoc_dimens.xml
+++ b/packages/SystemUI/res/values/havoc_dimens.xml
@@ -114,4 +114,6 @@
     <!-- The width/height of the charging indicator view on keyguard. -->
     <dimen name="keyguard_charging_indication_height">64dp</dimen>
     <dimen name="keyguard_charging_indication_width">32dp</dimen>
+
+    <dimen name="quick_status_bar_margin">14dp</dimen>
 </resources>
