Themes: Expose QS background color
Why google did this instead of leaving the gradient? Who knows, but we'll expose it to modify it on our themes later

Change-Id: I572442330e45645a6f4585a3e3b5fd030f804021

--- a/packages/SystemUI/res/values/havoc_colors.xml
+++ b/packages/SystemUI/res/values/havoc_colors.xml
@@ -100,4 +100,7 @@
     <color name="qs_disabled_color">@*android:color/qs_disabled</color>
     <color name="qs_inactive_color">@*android:color/qs_inactive</color> 
     <color name="qs_active_color">@*android:color/qs_active</color>  
+
+    <!-- Quicksettings main QS background-->
+    <color name="quick_settings_status_bar_background_color">#ff000000</color>
 </resources>
