--- a/packages/SystemUI/res/drawable/ic_qs_brightness_auto_on.xml
+++ b/packages/SystemUI/res/drawable/ic_qs_brightness_auto_on.xml
@@ -1,31 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-    Copyright (C) 2014 The Android Open Source Project
+     Copyright (C) 2014 The Android Open Source Project
 
-    Licensed under the Apache License, Version 2.0 (the "License");
-    you may not use this file except in compliance with the License.
-    You may obtain a copy of the License at
+     Licensed under the Apache License, Version 2.0 (the "License");
+     you may not use this file except in compliance with the License.
+     You may obtain a copy of the License at
 
-         http://www.apache.org/licenses/LICENSE-2.0
+          http://www.apache.org/licenses/LICENSE-2.0
 
-    Unless required by applicable law or agreed to in writing, software
-    distributed under the License is distributed on an "AS IS" BASIS,
-    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-    See the License for the specific language governing permissions and
-    limitations under the License.
+     Unless required by applicable law or agreed to in writing, software
+     distributed under the License is distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     See the License for the specific language governing permissions and
+     limitations under the License.
 -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:height="24dp"
-    android:width="24dp"
-    android:viewportHeight="24"
-    android:viewportWidth="24">
-    <path
-        android:fillColor="?android:attr/colorPrimary"
-        android:pathData="M18,14.48V18h-3.52L12,20.48L9.52,18H6v-3.52L3.52,12L6,9.52V6h3.52L12,3.52L14.48,6H18v3.52L20.48,12L18,14.48z" />
-    <path
-        android:fillColor="?android:attr/colorControlActivated"
-        android:pathData="M11,7l-3.2,9h1.9l0.7,-2h3.2l0.7,2h1.9L13,7H11zM10.85,12.65L12,9l1.15,3.65H10.85z" />
-    <path
-        android:fillColor="?android:attr/colorControlActivated"
-        android:pathData="M20,8.69 V4h-4.69L12,0.69L8.69,4H4v4.69L0.69,12L4,15.31V20h4.69L12,23.31L15.31,20H20v-4.69L23.31,12L20,8.69z M18,14.48V18h-3.52L12,20.48L9.52,18H6v-3.52L3.52,12L6,9.52V6h3.52L12,3.52L14.48,6H18v3.52L20.48,12L18,14.48z" />
+    android:width="24.0dip"
+    android:height="48.0dip"
+    android:viewportWidth="24.0"
+    android:viewportHeight="48.0"
+    android:tint="?android:attr/colorControlNormal">
+
+    <path android:fillColor="#FFFFFFFF"
+          android:pathData="M 14.3,28 13.6,26 H 10.4 L 9.7,28 H 7.8 L 11,19 h 2 l 3.2,9 H 14.3 M 20,20.69 V 16 H 15.31 L 12,12.69 8.69,16 H 4 v 4.69 L 0.69,24 4,27.31 V 32 H 8.69 L 12,35.31 15.31,32 H 20 V 27.31 L 23.31,24 20,20.69 m -9.15,3.96 h 2.3 L 12,21 Z" />
 </vector>
