--- a/packages/SystemUI/res/layout/status_bar_mobile_signal_group.xml
+++ b/packages/SystemUI/res/layout/status_bar_mobile_signal_group.xml
@@ -79,20 +79,20 @@
             android:id="@+id/inout_container"
             android:layout_height="17dp"
             android:layout_width="wrap_content"
-            android:layout_gravity="center_vertical">
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="3dp"
+            android:layout_marginEnd="3dp" >
             <ImageView
                 android:id="@+id/activity_in"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:src="@drawable/ic_activity_down"
-                android:paddingEnd="2dp"
             />
             <ImageView
                 android:id="@+id/activity_out"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:src="@drawable/ic_activity_up"
-                android:paddingEnd="2dp"
             />
         </com.android.systemui.statusbar.StatusBarInoutContainer>
     </com.android.keyguard.AlphaOptimizedLinearLayout>
