--- a/packages/SystemUI/res/layout/status_bar_wifi_group.xml
+++ b/packages/SystemUI/res/layout/status_bar_wifi_group.xml
@@ -30,7 +30,6 @@
         android:layout_height="match_parent"
         android:gravity="center_vertical"
         android:layout_marginStart="3dp"
-        android:layout_marginEnd="3dp"
     >
         <FrameLayout
             android:id="@+id/wifi_combo"
@@ -41,26 +40,27 @@
                 android:theme="?attr/lightIconTheme"
                 android:id="@+id/wifi_signal"
                 android:layout_height="wrap_content"
-                android:layout_width="wrap_content" />
+                android:layout_width="wrap_content"
+                android:layout_marginEnd="3dp" />
         </FrameLayout>
         <com.android.systemui.statusbar.StatusBarInoutContainer
                 android:id="@+id/inout_container"
                 android:layout_height="17dp"
                 android:layout_width="wrap_content"
-                android:gravity="center_vertical" >
+                android:gravity="center_vertical"
+                android:layout_marginStart="3dp"
+                android:layout_marginEnd="3dp" >
             <ImageView
                 android:id="@+id/activity_in"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:src="@drawable/ic_activity_down"
-                android:paddingEnd="2dp"
             />
             <ImageView
                 android:id="@+id/activity_out"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:src="@drawable/ic_activity_up"
-                android:paddingEnd="2dp"
             />
         </com.android.systemui.statusbar.StatusBarInoutContainer>
 
