base: make old qti telephony optional [1/2]
* enable by default to satisfy most devices

Signed-off-by: Kazakov Stepan <ksrt12group@gmail.com>

--- a/core/res/res/values/havoc_config.xml
+++ b/core/res/res/values/havoc_config.xml
@@ -203,4 +203,7 @@
 
     <!-- Whether to cleanup fingerprints upon connection to the daemon and when user switches -->
     <bool name="config_cleanupUnusedFingerprints">true</bool>
+
+    <!-- Whether the device has outdated qti-telephony-common.jar -->
+    <bool name="config_oldQtiTelephony">true</bool>
 </resources>
