base: make old qti telephony optional [1/2]
* enable by default to satisfy most devices

Change-Id: I47291c522bdb125a3316949d5d35f587f1617f0a

--- a/core/res/res/values/havoc_symbols.xml
+++ b/core/res/res/values/havoc_symbols.xml
@@ -271,4 +271,7 @@
 
   <!-- Power menu -->
   <java-symbol type="drawable" name="ic_lock_screenrecord" />
+
+  <!-- Old QTI Blobs -->
+  <java-symbol type="bool" name="config_oldQtiTelephony" />
 </resources>
