--- a/packages/SystemUI/res/values/havoc_dimens.xml
+++ b/packages/SystemUI/res/values/havoc_dimens.xml
@@ -34,6 +34,7 @@
     <dimen name="opa_rest_to_collapse">7.0dip</dimen>
 	
     <!-- Network traffic monitor -->
+    <dimen name="net_traffic_single_text_size">14dp</dimen>
     <dimen name="net_traffic_multi_text_size">8dp</dimen>
     <dimen name="net_traffic_txt_img_padding">2dp</dimen>
 
