--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -3473,7 +3473,7 @@
     <string name="config_mediaProjectionPermissionDialogComponent" translatable="false">com.android.systemui/com.android.systemui.media.MediaProjectionPermissionActivity</string>
 
     <!-- Corner radius of system dialogs -->
-    <dimen name="config_dialogCornerRadius">8dp</dimen>
+    <dimen name="config_dialogCornerRadius">@dimen/dialog_corner_radius</dimen>
     <!-- Corner radius of system buttons -->
     <dimen name="config_buttonCornerRadius">@dimen/control_corner_material</dimen>
     <!-- Corner radius of system progress bars -->
